fix: visible next card on process horizontal scroll (#10)

--- a/src/components/process/process.scss
+++ b/src/components/process/process.scss
@@ -56,8 +56,9 @@
     width: 100%;
     height: 100%;
     position: relative;
+    opacity: 0;
 
-    &-container {
+    &-scrollable {
       overflow-y: hidden;
       overflow-x: scroll;
       display: flex;
@@ -182,6 +183,8 @@
   .process {
     flex-direction: column;
     padding: 120px 0;
+    padding-left: 7.5%;
+    padding-right: 7.5%;
 
     &-text {
       width: 100%;
@@ -210,6 +213,10 @@
         width: 300px;
         height: 420px;
         box-shadow: none;
+      }
+
+      &:last-child {
+        padding-right: 15%;
       }
     }
 
